# candrive_fw

./: .gitignore  README.md  build_info.py  candrive_fw.code-workspace  platformio.ini  production_burn.py  set_option_bytes.py  stm32f103x8.ld
.github/workflows/: c-cpp.yml
src/: build_info.h  can_parser.h  command_handler.h  device.cpp  device.h  errors.h  flash.cpp  flash.h  kinematics.h  main.cpp  motor.h  parser.h  protocol.h  serial_parser.h  stream_handler.h
tools/: Cargo.toml
tools/src/: comm_manager.rs  device_manager.rs  ipc.rs  lib.rs  local_commands.rs  main.rs  protocol.rs  tests.rs  util.rs
tools/src/tests/: mocks.rs
