[package]
name = "candrive"
version = "0.1.0"
edition = "2024"

[lib]
name = "candrive_api"
bench = false
path = "src/lib.rs"

[dependencies]
byteorder = "1.5.0"
socketcan = {version = "3.5.0", features = ["tokio"] }
nb = "1.1.0"
crossbeam-channel = "0.5.15"

[[bin]]
name = "candrive-cli"
path = "src/main.rs"
